# metatrader5-mcp

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  install.bat  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  validate.py
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
metatrader5_mcp/: __init__.py  logger.py  main.py  prompts.py  schemas.py  tools_connection.py  tools_market.py  tools_positions.py  tools_status.py  tools_trading.py  utils.py
