[tool.poetry]
name = "metatrader5-mcp"
version = "0.1.0"
description = "MCP server for MetaTrader 5 integration"
readme = "README.md"
authors = ["Your Name <you@example.com>"]
packages = [{include = "metatrader5_mcp"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastmcp = "*"
mcp = ">=0.9.0"
MetaTrader5 = ">=5.0.4"
pydantic = ">=2.5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=23.0.0"

[tool.poetry.scripts]
metatrader5-mcp = "metatrader5_mcp.main:main"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
